@@ -11,7 +11,6 @@ import com.ibm.research.drl.dpt.providers.ProviderType;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 public class CreditCardTypeIdentifier extends AbstractManagerBasedIdentifier {
 
@@ -40,7 +39,7 @@ public class CreditCardTypeIdentifier extends AbstractManagerBasedIdentifier {
 
     @Override
     public Collection<ProviderType> getLinkedTypes() {
-        return List.of(ProviderType.CREDIT_CARD);
+        return Arrays.asList(ProviderType.CREDIT_CARD);
     }
 
     @Override
